--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,19 @@
         <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
+                <source>8</source>
+                <target>8</target>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.21.0</version>
+            <inherited>false</inherited>
+            <configuration>
+                <suiteXmlFiles>
+                    <suiteXmlFile>${suitXmlFile}</suiteXmlFile>
+                </suiteXmlFiles>
             </configuration>
         </plugin>
     </plugins>
@@ -32,6 +43,11 @@
             <artifactId>testng</artifactId>
             <version>6.14.3</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
         </dependency>
     </dependencies>
 
